@@ -62,43 +62,24 @@ processOptimizerOutput <- function(suppressWarnings, flatModel, matrixNames,
 	if (length(output$confidenceIntervals) > 0) {
 		dimnames(output$confidenceIntervals) <- list(intervalNames, c('lbound', 'ubound'))
 		dimnames(output$confidenceIntervalCodes) <- list(intervalNames, c('lbound', 'ubound'))
-		lowerWarnings <- which(output$confidenceIntervalCodes[,1] > 0)
-		upperWarnings <- which(output$confidenceIntervalCodes[,2] > 0)
-		if (length(lowerWarnings) > 0 && !suppressWarnings) {
-			intervalWarnings("lower", flatModel@name, lowerWarnings, 
-				output$confidenceIntervalCodes[,1], intervalNames)
-		}
-		if (length(upperWarnings) > 0 && !suppressWarnings) {
-			intervalWarnings("upper", flatModel@name, upperWarnings, 
-				output$confidenceIntervalCodes[,2], intervalNames)
+	}
+	if (output$status[[1]] > 0 && !suppressWarnings) {
+		npsolWarnings(paste("In model", omxQuotes(flatModel@name)), output$status[[1]])
+	}
+	if (output$status[[1]] < 0 || output$status[[2]] < 0) {
+		if (unsafe) {
+			warning(paste("The job for model", 
+			omxQuotes(flatModel@name),
+			"exited abnormally with the error message:",
+			output$status[[3]]), call. = FALSE)
+		} else {
+			stop(paste("The job for model",
+			omxQuotes(flatModel@name),
+			"exited abnormally with the error message:",
+			output$status[[3]]), call. = FALSE)
 		}
 	}
-    if (output$status[[1]] > 0 && !suppressWarnings) {
-    	npsolWarnings(paste("In model", omxQuotes(flatModel@name)), output$status[[1]])
-	}
-    if (output$status[[1]] < 0 || output$status[[2]] < 0) {
-    	if (unsafe) {
-    		warning(paste("The job for model", omxQuotes(flatModel@name),
-	            "exited abnormally with the error message:",
-	            output$status[[3]]), call. = FALSE)
-    	} else {
-	        stop(paste("The job for model", omxQuotes(flatModel@name),
-	            "exited abnormally with the error message:",
-	            output$status[[3]]), call. = FALSE)
-	    }
-    }
 	return(output)
-}
-
-intervalWarnings <- function(type, modelname, indices, codes, intervalNames) {
-	for(i in 1:length(indices)) {
-		index <- indices[[i]]
-		npsolWarnings(
-			paste("In model", omxQuotes(modelname), 
-			"while computing the", type, "bound for", 
-			omxQuotes(intervalNames[[index]])),
-			codes[[index]])
-	}
 }
 
 populateRunStateInformation <- function(model, parameters, matrices, 
