@@ -5,6 +5,7 @@ stable-1.0 tag
 * handling square bracket labels for (I - A) ^ - 1 speedup
 * added argument 'free' to omxGetParameters.  See ?omxGetParameters.
 * added argument 'strict' to omxSetParameters.  See ?omxSetParameters.
+* eliminated warnings for confidence interval optimization codes
 
 Release 1.0.0-1448 (September 30, 2010)
 =======================================
